# esp32-c6-geek-amiga-demo

./: .gitignore  CMakeLists.txt  INSTALL.md  LICENSE  README.md  build-and-flash.sh  sdkconfig.defaults
.github/workflows/: ci.yml
components/director/: CMakeLists.txt  director.c  transitions.c
components/director/include/: director.h  scene.h
components/fb/: CMakeLists.txt  fb.c
components/fb/include/: fb.h
components/gfx/: CMakeLists.txt  font_5x7.c  gfx.c
components/gfx/include/: gfx.h
components/gfx3d/: CMakeLists.txt  gfx3d.c
components/gfx3d/include/: gfx3d.h
components/lcd_drv/: CMakeLists.txt  lcd_drv.c
components/lcd_drv/include/: lcd_drv.h  lcd_pins.h
components/prefetch/: CMakeLists.txt  prefetch.c
components/prefetch/include/: prefetch.h
components/scenes/: CMakeLists.txt  scene_01_boot_title.c  scene_02_copper_scroller.c  scene_03_starfield.c  scene_04_cube.c  scene_05_plasma.c  scene_06_metaballs.c  scene_07_rotozoomer.c  scene_08_frames.c  scene_08_silhouette.c  scene_09_voxel.c  scene_10_tunnel.c  scene_11_synthwave.c  scene_12_credits.c
components/scenes/include/: scenes.h
docs/superpowers/plans/: 2026-05-02-amiga-demo-phase1.md
docs/superpowers/specs/: 2026-05-02-amiga-demo-design.md
main/: CMakeLists.txt  app_main.c  timeline.c
scripts/: activate.sh
test_host/: CMakeLists.txt  ppm.c  run.sh  test_director.c  test_fb.c  test_gfx.c  test_gfx3d.c  test_prefetch.c  test_scene_01.c  test_scene_02.c  test_scene_03.c  test_scene_04.c  test_scene_05.c  test_scene_06.c  test_scene_07.c  test_scene_08.c  test_scene_09.c  test_scene_10.c  test_scene_11.c  test_scene_12.c  test_smoke.c
test_host/host_shims/: esp_err.h
tools/: gen_silhouette_placeholder.py
